[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Ежов Валерий <ezhov.fzzz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
PyDrive = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
